--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://glmdear.github.io
 title: To Be Better	 
-subtitle: Keep Learnning & Sharing
+subtitle: Keep Learnning 
 author: lgao
 simple_search: http://google.com/search
 description:
